Closed Bug 1314349 Opened 8 years ago Closed 8 years ago

Crash in ShadowLayerChild::ActorDestroy on GPU process restart

Categories

(Core :: Graphics: Layers, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox52 --- fixed

People

(Reporter: dvander, Assigned: dvander)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

This was discovered by a try run with a forced crash in the GPU process. Example: https://treeherder.mozilla.org/#/jobs?repo=try&author=danderson@mozilla.com&selectedJob=30216098 ShadowLayerChild::mLayer is probably null.
Attached patch bug1314349.patchSplinter Review
Turns out that the SendPLayerConstructor call was failing, so the ShadowableLayer was never attached in the opposite direction. This patch only assigns a ShadowableLayer to ShadowaLayerChild if the constructor succeeds.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Attachment #8808017 - Flags: review?(matt.woodrow)
Attachment #8808017 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/9438fd24fd96 Don't attach shadowable layers if IPDL fails to construct an actor. (bug 1314349, r=mattwoodrow)
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: