Don't attach shadowable layers if IPDL fails to construct an actor. (bug 1314349, r=mattwoodrow)